# wolfram-exchange

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  rustfmt.toml
.github/workflows/: publish.yml  rust.yml
projects/project-logo/: Cargo.toml  Logo.ai
projects/wolfram-cli/: Cargo.toml  Readme.md  package.json  rustfmt.toml
projects/wolfram-cli/src/: main.rs  utils.rs
projects/wolfram-cli/tests/: main.rs
projects/wolfram-lib/: Cargo.toml  Readme.md  package.json  readme.md  rustfmt.toml
projects/wolfram-lib/src/: lib.rs  objects.rs
projects/wolfram-lib/src/associations/: mod.rs
projects/wolfram-lib/src/error/: mod.rs
projects/wolfram-lib/src/extensions/: json.rs  mod.rs  numpy.rs  pickle.rs  shape.rs  system_symbols.m  systems.rs  toml.rs  yaml.rs
projects/wolfram-lib/src/functions/: display.rs  mod.rs
projects/wolfram-lib/src/numbers/: convert.rs  display.rs  mod.rs
projects/wolfram-lib/src/traits/: display.rs  from_traits.rs  mod.rs  object_builder.rs  readable_writer.rs
projects/wolfram-lib/src/utils/: builders.rs  encoding.rs  from_traits.rs  from_traits_extension.rs  mod.rs  system_symbols.m  systems.rs
projects/wolfram-lib/tests/: compressed.rs  containers.rs  encoding.rs  functions.rs  main.rs  numbers.rs
projects/wolfram-lib/tests/test_serde/: mod.rs
projects/wolfram-serde/: Cargo.toml
projects/wolfram-serde/src/: errors.rs  lib.rs
projects/wolfram-serde/src/ser/: association.rs  mod.rs  sequence.rs
projects/wolfram-serde/tests/: main.rs
projects/wolfram-wxf/: Cargo.toml
projects/wolfram-wxf/src/: main.rs  utils.rs
