[package]
name = "wxf-converter"
version = "0.3.2"
authors = ["Aster <192607617@qq.com>"]
description = "Transform yaml, json, pkl files to wolfram"
repository = "https://github.com/oovm/wolfram-exchange"
documentation = "https://docs.rs/wolfram_wxf"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "wex"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

[dependencies.wolfram_wxf]
version = "0.6.3"
default-features = false
features = ["json", "pickle", "yaml", "toml"]
path = "../wolfram-lib"
