[package]
name = "wolfram_wxf"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/wolfram-exchange"
readme = "../../README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
# ordered-float = "1.0"
num = "0.2"
flate2 = "1.0"
serde_json = {version="1.0",optional=true}
yaml-rust =  {version="0.4",optional=true}
serde-pickle =  {version="0.6",optional=true}

[features]
default = []
json = ["serde_json"]
yaml = ["yaml-rust"]
pickle = ["serde-pickle"]