[package]
name = "wolfram_wxf"
version = "0.6.2"
authors = ["Aster <192607617@qq.com>"]
description = "Convert a value to the Wolfram Language WXF format."
repository = "https://github.com/oovm/wolfram-exchange"
documentation = "https://docs.rs/wolfram_wxf"
readme = "../../README.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.m", "*.json", "test/"]

[dependencies]
num = "0.4.0"
flate2 = "1.0.22"
ndarray = "0.15.4"
integer-encoding = "3.0.3"

serde_json = { version = "1.0.79", optional = true }
json5 = { version = "0.4.1", optional = true }
yaml-rust = { version = "0.4.5", optional = true }
toml = { version = "0.5.8", optional = true }
serde-pickle = { version = "1.1.0", optional = true }
npy = { version = "0.4.0", optional = true }

[features]
default = ["json5", "toml"]
json = ["serde_json"]
yaml = ["yaml-rust"]
pickle = ["serde-pickle"]
numpy = ["npy"]
