[package]
name = "serde_wxf"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/wolfram-exchange"
readme = "../../README.md"
license = "MPL-2.0"
edition = "2018"


[dependencies]
serde  = "1.0"

[dependencies.wolfram_wxf]
path = "../wolfram-lib"
version = "0.3.0"


