[package]
name = "serde_wxf"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/wolfram-exchange"
readme = "../../README.md"
license = "MPL-2.0"
edition = "2018"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wolfram_wxf]
version = "0.6"
path = "../wolfram-lib"


